--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.loader {
+#loader {
     width: 48px;
     height: 48px;
     border: 5px solid #FFF;
@@ -6,7 +6,7 @@
     border-radius: 50%;
     display: inline-block;
     box-sizing: border-box;
-    animation: rotation 1s linear infinite;
+    animation: rotation 2s linear infinite;
 }
 
 @keyframes rotation {
