--- a/style.css
+++ b/style.css
@@ -1,12 +1,35 @@
 #loader {
-    width: 48px;
-    height: 48px;
+    width: 68px;
+    height: 68px;
     border: 5px solid #FFF;
     border-bottom-color: #FF3D00;
     border-radius: 50%;
+    position: absolute;
     display: inline-block;
     box-sizing: border-box;
     animation: rotation 2s linear infinite;
+    left: 50%;
+    top: 200px;
+    margin-left: -34px;
+}
+
+.title, #poruka {
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.search {
+    width: 20%;
+    padding: 6px 6px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+body{
+    position: relative;
 }
 
 @keyframes rotation {
@@ -17,4 +40,24 @@
     100% {
         transform: rotate(360deg);
     }
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    z-index: 1001;
+    margin-top: 10px;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+}
+
+.loader-active {
+    background-color: rgba(0,0,0,0.75) !important;
 }
